--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # create and drop tables and sequences, loads import.sql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+server.port=8085
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=bmb_owner
-spring.datasource.password=mobile
+spring.datasource.username=mahajan
+spring.datasource.password=mahajan
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.database-platform = org.hibernate.dialect.Oracle10gDialect
