--- a/build.gradle
+++ b/build.gradle
@@ -13,15 +13,27 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'war'
+//apply plugin: 'war'
 
-group = 'com.mahajan'
-version = 'beta'
+//sgroup = 'com.mahajan'
+//version = 'beta'
 sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
-	
+	flatDir {
+       dirs 'libs'
+   }
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.mahajan.Expenseker.ExpensekerApplication'
+    }
+    baseName = project.name + '-mahajan'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+         //  configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) }
+            }
 }
 
 configurations {
@@ -29,9 +41,10 @@ configurations {
 }
 
 dependencies {
-	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation('org.springframework.boot:spring-boot-starter-jersey')
-	implementation('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-jersey')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile files('libs/ojdbc14.jar')
 	//implementation('oracle:ojdbc6')
   //	compile 'com.oracle.jdbc:ojdbc7:12.1.0.2'
   //  compile('org.glassfish.jersey.media:jersey-media-moxy')
