--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,25 @@
-buildscript {
-	ext {
-	//	springBootVersion = '1.5.9.RELEASE'
-		springBootVersion = '2.0.1.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
-}
 
-apply plugin: 'java'
-apply plugin: 'eclipse-wtp'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+plugins {
+	id 'org.springframework.boot' version '2.2.1.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id 'java'
+}
 sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
-	flatDir {
-       dirs 'libs'
-   }
 }
 
 bootJar {
- //   manifest {
- //       attributes 'Main-Class': 'com.mahajan.Expenseker.ExpensekerApplication'
-//    }
+
     mainClassName = 'com.mahajan.Expenseker.ExpensekerApplication'
-    baseName = project.name + '-mahajan'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-         //  configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) }
-            }
-}
+    baseName = project.name
+    version =  '1.0.0'
 
-
-
-configurations {
-	providedRuntime
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-jersey')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile files('libs/ojdbc14.jar')
-	//implementation('oracle:ojdbc6')
-  //	compile 'com.oracle.jdbc:ojdbc7:12.1.0.2'
-  //  compile('org.glassfish.jersey.media:jersey-media-moxy')
-	
-//	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jersey'
+	runtimeOnly 'com.oracle.ojdbc:ojdbc8'
 }
