--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,15 @@ spring.datasource.username=mahajan
 spring.datasource.password=mahajan
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.database-platform = org.hibernate.dialect.Oracle10gDialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
+
+
+
+# MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=dbuser
+#spring.datasource.password=dbpass
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+ 
