--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,6 @@ bootJar {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
-	runtimeOnly 'com.oracle.ojdbc:ojdbc8'
+//	runtimeOnly 'com.oracle.ojdbc:ojdbc8'
+	implementation 'com.h2database:h2'
 }
