--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8084
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=mahajan
-spring.datasource.password=mahajan
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=mahajan
+#spring.datasource.password=mahajan
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
+# Enabling H2 Console
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url = jdbc:h2:file:C:/data/samples
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 # MySQL
